css icon change

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ window.open(url);
     </div>
   </div>
   <div id="share">
-  		<div class="main"><a href="index.html#popupMenu" data-rel="popup" data-position-to="window" data-transition="pop"><img src="images/share.png" /></a>
+  		<div class="main"><a href="index.html#popupMenu" data-rel="popup" data-position-to="window" data-transition="pop"><img src="images/share.png" height="32" width="32"/></a>
             <div data-role="popup" id="popupMenu" data-theme="d" data-overlay-theme="a">
                     <ul data-role="listview" data-inset="true" style="min-width:210px;">
                         <li data-role="divider" data-theme="a">Share Quote on</li>
@@ -95,7 +95,7 @@ window.open(url);
                         <li><a href="#">Google+</a></li>
                     </ul>
             </div>
-        <a href="" id="copytoclip" class="ui-btn-inner ui-link"><img src="images/copy.jpg" /></a></div>
+        <a href="" id="copytoclip" class="ui-btn-inner ui-link"><img src="images/copy.png" height="32" width="32" /></a></div>
   </div>
   </div>
   <div id="footer">
@@ -109,7 +109,7 @@ window.open(url);
     </div>
   </div>
    <div id="share">
-  		<div class="main"><a href="index.html#popupMenu" data-rel="popup" data-position-to="window" data-transition="pop"><img src="images/share.png" /></a>
+  		<div class="main"><a href="index.html#popupMenu" data-rel="popup" data-position-to="window" data-transition="pop"><img src="images/share.png" height="32" width="32"/></a>
             <div data-role="popup" id="popupMenu" data-theme="d" data-overlay-theme="a">
                     <ul data-role="listview" data-inset="true" style="min-width:210px;">
                         <li data-role="divider" data-theme="a">Share Quote on</li>
@@ -118,7 +118,7 @@ window.open(url);
                         <li><a href="#">Google+</a></li>
                     </ul>
             </div>
-        <a href="" id="copytoclip" class="ui-btn-inner ui-link"><img src="images/copy.jpg" /></a></div>
+        <a href="" id="copytoclip" class="ui-btn-inner ui-link"><img src="images/copy.png" height="32" width="32" /></a></div>
   </div>
   <div id="footer">
     <div class="uiarrowRight"> <a href="index.html#page3" data-transition="slide" class="ui-btn-inner ui-link"></a> </div>
@@ -132,7 +132,7 @@ window.open(url);
     </div>
   </div>
   <div id="share">
-  		<div class="main"><a href="index.html#popupMenu" data-rel="popup" data-position-to="window" data-transition="pop"><img src="images/share.png" /></a>
+  		<div class="main"><a href="index.html#popupMenu" data-rel="popup" data-position-to="window" data-transition="pop"><img src="images/share.png" height="32" width="32"/></a>
             <div data-role="popup" id="popupMenu" data-theme="d" data-overlay-theme="a">
                     <ul data-role="listview" data-inset="true" style="min-width:210px;">
                         <li data-role="divider" data-theme="a">Share Quote on</li>
@@ -141,7 +141,7 @@ window.open(url);
                         <li><a href="#">Google+</a></li>
                     </ul>
             </div>
-        <a href="" id="copytoclip" class="ui-btn-inner ui-link"><img src="images/copy.jpg" /></a></div>
+        <a href="" id="copytoclip" class="ui-btn-inner ui-link"><img src="images/copy.png" height="32" width="32" /></a></div>
   </div>
   <div id="footer">
     <div class="uiarrowRight"> <a href="index.html#page4" data-transition="slide" class="ui-btn-inner ui-link"></a> </div>
@@ -155,7 +155,7 @@ window.open(url);
     </div>
   </div>
   <div id="share">
-  		<div class="main"><a href="index.html#popupMenu" data-rel="popup" data-position-to="window" data-transition="pop"><img src="images/share.png" /></a>
+  		<div class="main"><a href="index.html#popupMenu" data-rel="popup" data-position-to="window" data-transition="pop"><img src="images/share.png" height="32" width="32"/></a>
             <div data-role="popup" id="popupMenu" data-theme="e" data-overlay-theme="a">
                     <ul data-role="listview" data-inset="true" style="min-width:210px;">
                         <li data-role="divider" data-theme="e">Share Quote on</li>
@@ -164,7 +164,7 @@ window.open(url);
                         <li><a href="#">Google+</a></li>
                     </ul>
             </div>
-        <a href="" id="copytoclip" class="ui-btn-inner ui-link"><img src="images/copy.jpg" /></a></div>
+        <a href="" id="copytoclip" class="ui-btn-inner ui-link"><img src="images/copy.png" height="32" width="32" /></a></div>
   </div>
   <div id="footer">
     <div class="uiarrowRight"> <a href="index.html#page5" data-transition="slide" class="ui-btn-inner ui-link"></a> </div>
@@ -178,7 +178,7 @@ window.open(url);
     </div>
   </div>
   <div id="share">
-  		<div class="main"><a href="index.html#popupMenu" data-rel="popup" data-position-to="window" data-transition="pop"><img src="images/share.png" /></a>
+  		<div class="main"><a href="index.html#popupMenu" data-rel="popup" data-position-to="window" data-transition="pop"><img src="images/share.png" height="32" width="32"/></a>
             <div data-role="popup" id="popupMenu" data-theme="d" data-overlay-theme="a">
                     <ul data-role="listview" data-inset="true" style="min-width:210px;">
                         <li data-role="divider" data-theme="a">Share Quote on</li>
@@ -187,7 +187,7 @@ window.open(url);
                         <li><a href="#">Google+</a></li>
                     </ul>
             </div>
-        <a href="" id="copytoclip" class="ui-btn-inner ui-link"><img src="images/copy.jpg" /></a></div>
+        <a href="" id="copytoclip" class="ui-btn-inner ui-link"><img src="images/copy.png" height="32" width="32" /></a></div>
   </div>
   <div id="footer">
     <div class="uiarrowLeft"> <a href="index.html#page4" data-transition="slide" class="ui-btn-inner ui-link"></a> </div>
